--- a/scripts/Cargo.toml
+++ b/scripts/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gdnative = "0.9.0-preview.0"
+gdnative = "0.9.0"
 approx = "0.3.2"
 num = "0.3.0"
 
